fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,17 @@ html {
   min-width: 9em;
 }
 
+.cards div {
+  text-align: center;
+}
+
 .cards a {
   display: inline-block;
   padding: .5em .75em;
   background-color: #ccc;
   border-radius: 4px;
   color: #000;
-text-decoration: none;
+  text-decoration: none;
 }
 
 .cards a:hover {
